--- a/front-end/src/components/About.css
+++ b/front-end/src/components/About.css
@@ -1,165 +1,128 @@
-@media screen and (max-width: 600px) {
-  body {
-    background-color: white;
-  }
+@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
-  .container-title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-  .about-us {
-    width: 100%;
-    height: auto;
-    padding: 18px;
-  }
-  .us-cards1 {
-    display: flex;
-    /* justify-self: center; */
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 150%;
-  }
-
-  .us-cards2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 150%;
-  }
-
-  .Anna {
-    width: 40%;
-    margin: 10px;
-  }
-  .Alessandra {
-    width: 40%;
-    margin: 10px;
-  }
-  .Helen {
-    width: 40%;
-    margin: 10px;
-  }
-  .Silvia {
-    width: 40%;
-    margin: 10px;
-  }
-
-  .biography {
-    position: absolute;
-    width: 321px;
-    height: 210px;
-
-    top: 750px;
-    margin-right: 25px;
-
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 20px;
-    line-height: 23px;
-    text-align: center;
-
-    color: #000000;
-  }
-}
-/*-------desktopversione----*/
-
-body {
-  background-color: white;
-}
-
-.container-title {
-  display: flex;
-
-  align-items: center;
-  justify-content: end;
-  align-items: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-.about-us {
-  display: flex;
-  justify-content: end;
-  width: 70%;
-  height: auto;
-  padding: 18px;
-  margin-right: 30%;
-}
-
-.us-cards1 {
-  display: flex;
-  /*justify-self: center;*/
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
-  margin-top: 80px;
-  margin-left: 50px;
-}
-.us-cards2 {
-  display: flex;
-  /*justify-self: center;*/
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
-  margin-bottom: 6em;
-  margin-left: 50px;
+/* for desktop */
+.wrapper {
+  display: grid;
+  grid-template-columns: 150px 300px 300px 500px 15px;
+  grid-template-rows: 40px 350px 350px 10px;
 }
 
 .Anna {
-  display: flex;
-  width: 30%;
-  margin: 10px;
+  grid-column-start: 2;
+  grid-row-start: 2;
+  height: 90%;
+  width: auto;
 }
 .Alessandra {
-  display: flex;
-  width: 30%;
-  margin: 10px;
+  grid-column-start: 3;
+  grid-row-start: 2;
+  height: 90%;
+  width: auto;
 }
 .Helen {
-  display: flex;
-  width: 30%;
-  margin: 10px;
+  grid-column-start: 2;
+  grid-row-start: 3;
+  height: 90%;
+  width: auto;
 }
 .Silvia {
-  display: flex;
-  width: 30%;
-  margin: 10px;
+  grid-column-start: 3;
+  grid-row-start: 3;
+  height: 90%;
+  width: auto;
 }
 
-.biography {
-  /* display: flex;
-  justify-content: flex-end; */
-  width: 321px;
-  font-family: Roboto;
+.text-container {
+  grid-column-start: 4;
+  grid-row-start: 2;
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  justify-content: left;
+  margin-top: -29px;
+  margin-left: -10px;
+
+}
+
+.text {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 19px;
   font-style: normal;
   font-weight: 300;
-  font-size: 20px;
-  line-height: 23px;
-  text-align: center;
-  margin-right: 30%;
+  line-height: 1.6;
+  letter-spacing: 0em;
+  text-align: left;
+  /* text-align is justifed left for accessibility purposes - centered or jsutified text is a lot less readable */
+}
+/* for mobile */
+@media screen and (max-width: 600px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 1rem auto 1rem;
+    grid-template-rows: repeat(6, 370px) 20px;
+    grid-gap: 5px;
+    align-items: center;
+    justify-items: center;
+  }
 
-  color: #000000;
-}
-.us-cards,
-.container-biography {
-  display: flex;
-  justify-content: center;
-}
-.about-us,
-.container-biography {
-  justify-content: flex-end;
-}
+  .Anna {
+    grid-column-start: 2;
+    grid-row-start: 3;
+    height: auto;
+    width: 250px;
+  }
+  .Alessandra {
+    grid-column-start: 2;
+    grid-row-start: 4;
+    height: auto;
+    width: 250px;
+  }
+  .Helen {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 5;
+    height: auto;
+    width: 250px;
+  }
+  .Silvia {
+    grid-column-start: 2;
+    grid-row-start: 6;
+    height: auto;
+    width: 250px;
+  }
 
-.container-about {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  .text-container {
+    grid-column-start: 3;
+    width: 200%; 
+    margin-top: -100px; 
+  }
+
+  .title {
+    grid-column-start: 2;
+    grid-column-end: 2;
+    width: 300%;
+    margin-top: -330px; 
+
+  }
+
+  .text {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 1.6;
+    letter-spacing: 0em;
+    text-align: left;
+    width: 280%;
+    margin-left: 15px;
+    margin-right: -5px;
+    margin-top: -260px;
+  }
 }
