--- a/front-end/src/components/Footer/Footer.css
+++ b/front-end/src/components/Footer/Footer.css
@@ -3,50 +3,53 @@
 
 /*--------Desktop--------*/
 .footerpage-container {
-  position: relative;
-  height: 30vh;
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	height: 20vh;
 }
 
 .main-footer {
-  color: white;
-  background-color: #b95c77;
-  padding: 18px;
-
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  font-weight: bold;
-  font-size: 10px;
+	color: white;
+	background-color: #b95c77;
+	padding: 10px;
+	width: 100%;
+	font-weight: bold;
+	font-size: 10px;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	text-align: center;
 }
-.FooterQuote {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 19px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 19px;
-  letter-spacing: 0em;
-  text-align: center;
-  padding: 19px;
+
+.quotes {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	font-size: 19px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: 19px;
+	letter-spacing: 0em;
+	text-align: center;
+	padding: 19px;
 }
 
 .icon {
-  height: 45px;
-  width: 45px;
-  /*left: 200px;
+	height: 45px;
+	width: 45px;
+	/*left: 200px;
   top: 946px;*/
-  border-radius: 0px;
+	border-radius: 0px;
 }
 .container {
-  display: flex;
-  font-weight: bold;
-  font-size: x-small;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  justify-content: space-evenly;
-  align-items: center;
-  padding: 7px;
+	display: flex;
+	font-weight: bold;
+	font-size: x-small;
+	/* bottom: 0; */
+	/* left: 0; */
+	width: 100%;
+	justify-content: space-evenly;
+	align-items: center;
+	padding: 15px;
 }
 
 /* .container > .icon {
@@ -54,75 +57,73 @@
 } */
 
 h2 {
-  display: inline-block;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: initial;
-  font-size: 16px;
+	display: inline-block;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	font-weight: initial;
+	font-size: 16px;
 }
 
 /*----Mobile-----*/
 
 @media screen and (max-width: 600px) {
-  .footerpage-container {
-    position: relative;
-    height: 20vh;
-  }
+	.footerpage-container {
+		display: flex;
+		justify-content: center;
+		text-align: center;
+		height: 23vh;
+	}
 
-  .main-footer {
-    color: white;
-    background-color: #b95c77;
-    padding-top: 2em;
-    padding-bottom: 2em;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    font-weight: bold;
-    font-size: 10px;
-  }
+	.main-footer {
+		color: white;
+		background-color: #b95c77;
+		padding-top: 2em;
+		padding-bottom: 2em;
+		bottom: 0;
+		width: 100%;
+		font-weight: bold;
+		font-size: 10px;
+	}
 
-  .FooterQuote {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 19px;
-    letter-spacing: 0em;
-    text-align: center;
-    padding: 9px;
-  }
+	.quotes {
+		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+			Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+		font-size: 15px;
+		font-style: normal;
+		font-weight: 300;
+		line-height: 19px;
+		letter-spacing: 0em;
+		text-align: center;
+		padding: 9px;
+	}
 
-  .icon {
-    height: 31px;
-    width: 31px;
-    /*left: 200px;
+	.icon {
+		height: 31px;
+		width: 31px;
+		/*left: 200px;
   top: 946px;*/
-    border-radius: 0px;
-  }
-  .container {
-    display: flex;
-    font-weight: bold;
-    font-size: x-small;
-    font-style: roboto serif;
-    position: center;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-  .container > .icon {
-    padding: 3px;
-  }
-  h2 {
-    display: inline-block;
-    line-height: 0.5;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-weight: initial;
-  }
-}
-
-.FooterQuote {
+		border-radius: 0px;
+	}
+	.container {
+		display: flex;
+		font-weight: bold;
+		font-size: x-small;
+		font-style: roboto serif;
+		position: center;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		justify-content: space-evenly;
+		align-items: center;
+	}
+	.container > .icon {
+		padding: 3px;
+	}
+	h2 {
+		display: inline-block;
+		line-height: 0.5;
+		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+			Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+		font-weight: initial;
+	}
 }
