--- a/front-end/src/components/Women-Info/womenInfo.css
+++ b/front-end/src/components/Women-Info/womenInfo.css
@@ -31,6 +31,7 @@
 .card-container {
 	display: grid;
 	grid-template-columns: auto auto auto auto;
+	margin-bottom: 2rem;
 }
 
 .women-cards {
@@ -53,13 +54,15 @@
 }
 
 .second-column {
-	display: grid;
+	display: inline-flex;
 	justify-content: center;
 	align-items: start;
-	grid-column-start: 2;
+	flex-flow: column;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	padding: 2rem;
+	flex-wrap: wrap;
+	gap: 10px;
 }
 
 .info-img {
@@ -100,7 +103,7 @@
 .women-nationality,
 .women-contribution {
 	font-size: 1rem;
-	align-self: start;
+	align-self: center;
 	justify-self: center;
 	text-align: center;
 	white-space: wrap;
@@ -115,7 +118,7 @@
 }
 .women-contribution {
 	text-align: justify;
-	text-justify: inter-word;
+	line-height: 1.8rem;
 	padding: 0rem 1rem 0rem 1rem;
 }
 
