--- a/front-end/src/components/About.css
+++ b/front-end/src/components/About.css
@@ -3,54 +3,41 @@
 
 /* for desktop */
 .wrapper {
-  display: grid;
-  grid-template-columns: 150px 300px 300px 500px 15px;
-  grid-template-rows: 40px 350px 350px 10px;
+  margin-left: 50px;
+  display: flex;
 }
 
-.Anna {
-  grid-column-start: 2;
-  grid-row-start: 2;
-  height: 90%;
-  width: auto;
+.img-wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
-.Alessandra {
-  grid-column-start: 3;
-  grid-row-start: 2;
-  height: 90%;
+
+.img {
+  height: 350px;
   width: auto;
-}
-.Helen {
-  grid-column-start: 2;
-  grid-row-start: 3;
-  height: 90%;
-  width: auto;
-}
-.Silvia {
-  grid-column-start: 3;
-  grid-row-start: 3;
-  height: 90%;
-  width: auto;
+  margin: 10px;
 }
 
 .text-container {
-  grid-column-start: 4;
-  grid-row-start: 2;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+
+  margin-left: 70px;
+  margin-right: 30px;
 }
 
 .title {
-  justify-content: left;
-  margin-top: -29px;
-  margin-left: -10px;
-
+  height: 10vw;
+  width: auto;
+ 
+  margin-bottom: -100px;
+  margin-left: 10px;
 }
 
 .text {
+
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 19px;
+  font-size: 1.5vw;
   font-style: normal;
   font-weight: 300;
   line-height: 1.6;
@@ -61,68 +48,38 @@
 /* for mobile */
 @media screen and (max-width: 600px) {
   .wrapper {
-    display: grid;
-    grid-template-columns: 1rem auto 1rem;
-    grid-template-rows: repeat(6, 370px) 20px;
-    grid-gap: 5px;
-    align-items: center;
-    justify-items: center;
+    display: flex;
+    flex-direction: column-reverse;
   }
 
-  .Anna {
-    grid-column-start: 2;
-    grid-row-start: 3;
+  .img {
     height: auto;
-    width: 250px;
-  }
-  .Alessandra {
-    grid-column-start: 2;
-    grid-row-start: 4;
-    height: auto;
-    width: 250px;
-  }
-  .Helen {
-    grid-column-start: 2;
-    grid-column-end: 2;
-    grid-row-start: 5;
-    height: auto;
-    width: 250px;
-  }
-  .Silvia {
-    grid-column-start: 2;
-    grid-row-start: 6;
-    height: auto;
-    width: 250px;
+    width: auto;
+    margin: 10px;
+    align-items: center safe;
+    justify-content: center safe;
   }
 
   .text-container {
-    grid-column-start: 3;
-    width: 200%; 
-    margin-top: -100px; 
+    align-items: center safe;
+    justify-content: center safe;
+    margin-right: -60px;
   }
 
   .title {
-    grid-column-start: 2;
-    grid-column-end: 2;
-    width: 300%;
-    margin-top: -330px; 
-
+    margin-left: -140px;
+    margin-top: 5px;
   }
 
   .text {
-    grid-column-start: 2;
-    grid-column-end: 3;
+    margin-right: 130px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 15px;
+    font-size: 4vw;
     font-style: normal;
     font-weight: 300;
     line-height: 1.6;
     letter-spacing: 0em;
-    text-align: left;
-    width: 280%;
-    margin-left: 15px;
-    margin-right: -5px;
-    margin-top: -260px;
+    text-align: justify;
   }
 }
