--- a/front-end/src/components/GameIntroPage.css
+++ b/front-end/src/components/GameIntroPage.css
@@ -13,6 +13,24 @@ body {
   grid-gap: 20px;
 }
 
+.game-rules {
+  border-radius: 1rem;
+  width: 700px;
+  height: 300px;
+  background-color: #efedea;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  font-size: 1.5rem;
+  border: 1px solid #eedf5b;
+  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
+  grid-area: 3 / 2 / 4 / 4;
+  justify-self: center;
+  text-align: justify;
+  padding: 20px;
+  margin: 20px;
+}
+
 .level-select-text {
   border-radius: 1rem;
   width: 350px;
@@ -20,15 +38,15 @@ body {
   background-color: #eedf5b;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  text-transform: uppercase;
   font-weight: 400;
   font-size: 1.5rem;
   border: 1px solid #efedea;
   box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
-  grid-area: 3 / 2 / 4 / 4;
+  grid-area: 4 / 2 / 4 / 4;
   justify-self: center;
   text-align: center;
   padding: 20px;
+  margin: 20px;
 }
 
 .level-select-container {
@@ -37,19 +55,33 @@ body {
 }
 
 .level-button {
-  border-radius: 2rem;
+  border-radius: 1rem;
+  width: 300px;
+  height: 70px;
+  background-color: #eedf5b;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 400;
+  font-size: 1.5rem;
+  border: 1px solid #efedea;
+  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
+  grid-area: 4 / 2 / 4 / 4;
+  justify-self: center;
+  text-align: center;
+  padding: 20px;
+  margin: 20px;
+  /* border-radius: 2rem;
   width: 150px;
   height: 35px;
   background-color: #efedea;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  text-transform: uppercase;
   font-weight: 400;
   border: 1px solid #eedf5b;
   box-shadow: 0px 8px 15px rgb(0 0 0 / 20%);
   transition: all 0.3s ease 0s;
   cursor: pointer;
-  margin: 20px;
+  margin: 20px;*/
 }
 
 .level-button:hover {
