--- a/front-end/src/components/About.css
+++ b/front-end/src/components/About.css
@@ -3,7 +3,6 @@
 
 /* for desktop */
 .wrapper {
-  margin-left: 50px;
   display: flex;
 }
 
@@ -48,7 +47,8 @@
 /* for mobile */
 @media screen and (max-width: 600px) {
   .wrapper {
-    display: grid;
+    display: flex;
+    flex-direction: column-reverse;
   }
 
   .img-wrapper {
@@ -66,21 +66,21 @@
   }
 
   .text-container {
-    grid-area: 1 / 1 / 2 / 2;
-    align-items: center safe;
-    justify-content: center safe;
-    margin-right: -60px;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: auto;
+    justify-content: center;
   }
 
   .title {
-    height: 30vh;
+    height: 13vh;
   }
 
   .text {
-    margin-right: 125px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    font-size: 11vw;
+    font-size: 5vw;
     font-style: normal;
     font-weight: 300;
     line-height: 1.6;
