--- a/front-end/src/components/Women-Info/womenInfo.css
+++ b/front-end/src/components/Women-Info/womenInfo.css
@@ -56,7 +56,7 @@
 .second-column {
 	display: inline-flex;
 	justify-content: center;
-	align-items: start;
+	align-items: flex-start;
 	flex-flow: column;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
