--- a/front-end/src/components/GameIntroPage.css
+++ b/front-end/src/components/GameIntroPage.css
@@ -70,18 +70,6 @@ body {
   text-align: center;
   padding: 20px;
   margin: 20px;
-  /* border-radius: 2rem;
-  width: 150px;
-  height: 35px;
-  background-color: #efedea;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 400;
-  border: 1px solid #eedf5b;
-  box-shadow: 0px 8px 15px rgb(0 0 0 / 20%);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  margin: 20px;*/
 }
 
 .level-button:hover {
@@ -92,6 +80,29 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+  .page-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .game-rules {
+    border-radius: 1rem;
+    width: auto;
+    height: auto;
+    background-color: #efedea;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-weight: 400;
+    font-size: 1.5rem;
+    border: 1px solid #eedf5b;
+    box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
+    justify-self: center;
+    text-align: justify;
+    padding: 20px;
+    margin: 20px;
+  }
+
   .level-select-text {
     width: 333px;
     height: 80px;
@@ -103,5 +114,7 @@ body {
   .level-select-container {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
