--- a/front-end/src/components/Contact.css
+++ b/front-end/src/components/Contact.css
@@ -2,237 +2,203 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.form-page {
-	display: grid;
-	align-items: center;
-	justify-content: space-between;
-	grid-auto-flow: dense;
+.contact-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 .image-container {
-	grid-column-start: 1;
-	justify-self: center;
-	padding-top: 5px;
+  display: flex;
+  justify-self: center;
+  padding-top: 3px;
+  margin-left: 3px;
 }
 
 .contact-image {
-	max-width: 50vw;
-	height: 100vh;
-	margin-top: 0px;
-	margin-left: 0px;
+  justify-content: center;
+  width: 90vh;
 }
+
 .form-page {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .contact-caption {
-	justify-self: center;
-	align-self: start;
-	width: 30vh;
-	height: auto;
-	padding: 18px;
-	grid-column-start: 2;
-}
-
-.form-container {
-	display: grid;
-	grid-gap: 10px;
-	justify-self: center;
-	grid-column-start: 2;
-	grid-row-start: 1;
-	margin-right: 100px;
-}
-
-.form-box {
-	grid-column-start: 2;
+  justify-content: center;
+  align-self: center;
+  width: 30vh;
+  height: auto;
+  padding: 18px;
 }
 
 .contact-text {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	font-size: 19px;
-	font-style: normal;
-	font-weight: 300;
-	line-height: 19px;
-	letter-spacing: 0em;
-	margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 35px;
+  /*grid-column-start: 2;*/
 }
 
-.input {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
+.form-control,
+.form-container {
+  display: flex;
+  justify-self: center;
 }
 
-.form-control {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	align-self: center;
-	justify-content: space-between;
-	width: 170%;
-	margin: 10px;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+.input-form {
+  display: flex;
+  justify-content: center;
+  padding: 16px;
+  font-size: 1rem;
+}
+input {
+  display: flex;
+  justify-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  justify-items: center;
+  padding: 16px;
+  font-size: 1rem;
+  text-align: center;
+  width: 300px;
+  height: 1em;
+}
+textarea {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  width: 300px;
+  font-size: medium;
 }
 
-.button {
-	cursor: pointer;
-	position: relative;
-	padding: 1rem 3rem;
-	border-radius: 6.75rem;
-	line-height: 1rem;
-	font-size: 1rem;
-	font-weight: 600;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin: 10px;
-
-	border: 1px solid #012880;
-	background-image: linear-gradient(-180deg, #c56379 0%, #c56379 100%);
-	/* box-shadow: 0 1rem 1.25rem 0 #C56379(22, 75, 195, 0.5), */
-	/* 0 -0.25rem 1.5rem rgba(110, 15, 155, 1) inset,
-    0 0.75rem 0.5rem rgba(255, 255, 255, 0.4) inset,
-    0 0.25rem 0.5rem 0 rgba(180, 70, 207, 1) inset; */
+#name,
+#email {
+  border-radius: 0.8rem;
+  width: 320px;
+  height: 50px;
+  border: none;
+  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
+  justify-self: center;
 }
 
-.button span {
-	color: transparent;
-	background-image: linear-gradient(0deg, #fefafd 0%, #fefafd 100%);
-	-webkit-background-clip: text;
-	background-clip: text;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+#message {
+  border-radius: 0.8rem;
+  width: 320px;
+  height: 120px;
+  border: none;
+  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
+  justify-self: center;
 }
 
-.button::before {
-	content: "";
-	display: block;
-	height: 0.25rem;
-	position: absolute;
-	top: 0.5rem;
-	left: 50%;
-	transform: translateX(-50%);
-	width: calc(100% - 7.5rem);
-	background: #fff;
-	border-radius: 100%;
-
-	opacity: 0.7;
-	background-image: linear-gradient(
-		-270deg,
-		rgba(255, 255, 255, 0) 0%,
-		#ffffff 20%,
-		#ffffff 80%,
-		rgba(255, 255, 255, 0) 100%
-	);
+.button-contact {
+  border-radius: 2rem;
+  width: 150px;
+  height: 35px;
+  background-color: #efedea;
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  border: none;
+  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  align-items: center;
+  display: flex;
+  justify-self: center;
+  justify-content: center;
 }
-
-.button::after {
-	content: "";
-	display: block;
-	height: 0.25rem;
-	position: absolute;
-	bottom: 0.75rem;
-	left: 50%;
-	transform: translateX(-50%);
-	width: calc(100% - 7.5rem);
-	background: #fff;
-	border-radius: 100%;
-
-	filter: blur(1px);
-	opacity: 0.05;
-	background-image: linear-gradient(
-		-270deg,
-		rgba(255, 255, 255, 0) 0%,
-		#ffffff 20%,
-		#ffffff 80%,
-		rgba(255, 255, 255, 0) 100%
-	);
+.button-contact:hover {
+  background-color: #eedf5b;
+  box-shadow: 0px 15px 20px rgba(238, 233, 91, 0.4);
+  color: white;
+  transform: translateY(-7px);
 }
 
 @media screen and (max-width: 600px) {
-	body {
-		background-image: none;
-	}
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-	.form-page {
-		justify-content: center;
-		align-items: center;
-		grid-template-columns: revert;
-	}
+  .form-page {
+    justify-content: center;
+    align-items: center;
+  }
 
-	.image-container {
-		display: grid;
-		justify-content: center;
-		align-items: center;
-	}
+  .image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-	.contact-image {
-		width: 100%;
-		height: auto;
-	}
+  .contact-image {
+    width: 100%;
+    height: auto;
+  }
 
-	.text-container {
-		display: grid;
-		padding: 0px 30px 0px 30px;
-		grid-column-start: 1;
-		text-align: center;
-	}
+  .text-container {
+    display: flex;
+    padding: 0px 30px 0px 30px;
+    text-align: center;
+  }
 
-	.contact-us-call {
-		font-size: 17px;
-		grid-column-start: 1;
-	}
+  .contact-us-call {
+    font-size: 17px;
+  }
 
-	.contact-caption {
-		width: 100%;
-		height: auto;
-		padding: 18px 18px 0px 18px;
-		grid-column-start: 1;
-	}
-	.form-box {
-		grid-column-start: 1;
-		justify-self: center;
-	}
+  .contact-caption {
+    width: 70%;
+    height: auto;
+    padding: 18px 18px 0px 18px;
+  }
 
-	.form-container {
-		display: grid;
-		justify-content: center;
-		align-items: center;
-		grid-gap: 20px;
-		grid-column-start: 1;
-		grid-row-start: 2;
+  .form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 20px;
+    margin-right: 0px;
+  }
+  .contact-text {
+    line-height: 1.5;
+    text-align: center;
+  }
 
-		margin-right: 0px;
-	}
+  input {
+    display: flex;
+    justify-content: center;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    justify-items: center;
+    padding: 16px;
+    font-size: 1rem;
+    text-align: center;
+    width: 300px;
+    height: 1em;
 
-	label {
-		padding: 18px;
-		font-size: 1rem;
-	}
+    /*padding: 18px;
+    font-size: 1rem;*/
+  }
 
-	#name,
-	#email {
-		width: 250px;
-		height: 40px;
-	}
+  #name,
+  #email {
+    width: 250px;
+    height: 40px;
+  }
 
-	#message {
-		width: 250px;
-		height: 100px;
-	}
-
-	.button {
-		grid-column-start: 1;
-	}
+  #message {
+    width: 250px;
+    height: 100px;
+  }
 }
