--- a/front-end/src/components/Memory/Game.css
+++ b/front-end/src/components/Memory/Game.css
@@ -1,7 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap");
 
 .Game {
-  text-align: center;
+  /* text-align: center; */
+  display: grid;
+  grid-template-columns: auto;
+  /* margin: 2.5rem; */
+  text-align: -webkit-center;
+  margin-right: 15px;
 }
 
 .Game-header {
@@ -44,14 +49,15 @@
 }
 
 .Card {
-  display: inline-block;
+  display: block;
   border-color: #eedf5b;
   border-width: 5px;
   border-style: solid;
   margin-bottom: 15px;
   margin-left: 15px;
-  width: 100px;
+  width: 80px;
   box-shadow: 2px 2px 3px 1px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 .Matched {
@@ -59,16 +65,21 @@
 }
 
 .CardContainer {
-  /* display: grid;
+  display: grid;
   justify-content: center;
   align-items: center;
-  grid: 120px /auto auto; */
+  /* grid: 120px /auto auto; */
+  grid-template-columns: auto auto auto;
+  text-align: -webkit-center;
+}
 
-  display: inline-block;
-  max-width: 950px;
-  margin: "20px auto";
+@media (min-width: 1281px) {
+  .CardContainer {
+    grid-template-columns: repeat(6, auto);
+    grid-template-rows: auto auto auto;
+  }
 
-  /* display: flex;
-  flex-wrap: wrap;
-  align-items: center; */
+  .Card {
+    width: 150px;
+  }
 }
