--- a/front-end/src/components/Memory/Memory.css
+++ b/front-end/src/components/Memory/Memory.css
@@ -30,12 +30,35 @@
   text-transform: uppercase;
   font-weight: 400;
   border: none;
-  box-shadow: 0px 8px 15px rgb(0 0 0 / 10%);
+  box-shadow: 0px 8px 5px rgb(0 0 0 / 10%);
   transition: all 0.3s ease 0s;
   cursor: pointer;
 }
 
+.button-game2 {
+  border-radius: 2rem;
+  width: 150px;
+  height: 35px;
+  background-color: #efedea;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  border: none;
+  box-shadow: 0px 8px 5px rgb(0 0 0 / 10%);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+
 .button-game:hover {
+  background-color: #eedf5b;
+  box-shadow: 0px 15px 20px rgba(238, 233, 91, 0.4);
+  color: white;
+  transform: translateY(-7px);
+}
+
+.button-game2:hover {
   background-color: #eedf5b;
   box-shadow: 0px 15px 20px rgba(238, 233, 91, 0.4);
   color: white;
@@ -47,5 +70,19 @@
     background-image: url("https://i.imgur.com/d62Jtrf.jpg");
     background-position: center;
     background-size: cover;
+  }
+
+  .button-game {
+    width: 230px;
+    height: 50px;
+    font-size: 17px;
+    font-weight: 300;
+  }
+
+  .button-game2 {
+    width: 230px;
+    height: 50px;
+    font-size: 17px;
+    font-weight: 300;
   }
 }
